--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,6 +3,8 @@
   height: var(--navbar-height);
   align-items: center;
   background-color: var(--secondary-bg-color);
+  overflow: hidden;
+  margin-bottom: 5px;
   &__logo {
     margin: 10px;
     height: 60%;
@@ -21,5 +23,19 @@
   &__filename {
     margin-left: 8%;
     white-space: pre;
+  }
+}
+@media  (max-width: 768px)  {
+  .navbar__tools {
+    display: none;
+  }
+  .navbar__filename {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media  (max-width: 420px)  {
+  .navbar__logo {
+    display: none;
   }
 }
