--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -27,10 +27,16 @@
       &__item {
         display: flex;
         padding-bottom: 10px;
+        cursor: pointer;
         svg {
           font-size: 5px;
           width: 20px;
           margin-right: 5px;
+        }
+        &:hover {
+          p {
+            border-bottom: 1px solid white;
+          }
         }
       }
     }
@@ -46,4 +52,10 @@
   visibility: hidden;
 
   background-color: green;
+}
+
+@media  (max-width: 768px)  {
+  .explorer {
+    display: none;
+  }
 }
