--- a/src/components/Filenames/Filenames.scss
+++ b/src/components/Filenames/Filenames.scss
@@ -2,15 +2,27 @@
   display: flex;
   flex-direction: row;
   margin-bottom: auto;
+  overflow: hidden;
   &__item {
     display: flex;
     flex-direction: row;
     padding: 10px;
     background-color: var(--secondary-bg-color);
+    cursor: pointer;
     svg {
       font-size: 5px;
       width: 20px;
       margin-right: 5px;
     }
+    &:hover {
+      p {
+        border-bottom: 1px solid white;
+      }
+    }
+  }
+}
+@media  (max-width: 420px)  {
+  .filenames__item {
+    display: none;
   }
 }
