--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,4 +4,5 @@
   height: var(--footer-height);
   justify-content: center;
   align-items: center;
+  background-color: var(--secondary-bg-color);
 }
