--- a/src/components/IconAside/IconAside.scss
+++ b/src/components/IconAside/IconAside.scss
@@ -1,6 +1,7 @@
 .iconAside {
   display: flex;
   flex-direction: column;
+  // justify-content: space-between;
   min-height: var(--main-height);
   // min-height: -webkit-fill-available;
   width: fit-content;
