--- a/src/components/Filenames/Filenames.scss
+++ b/src/components/Filenames/Filenames.scss
@@ -3,21 +3,23 @@
   flex-direction: row;
   margin-bottom: auto;
   overflow: hidden;
+  box-sizing:content-box;
+  
+
   &__item {
     display: flex;
     flex-direction: row;
     padding: 10px;
     background-color: var(--secondary-bg-color);
+    border-top: 2px solid var(--secondary-bg-color);
     cursor: pointer;
     svg {
-      font-size: 5px;
+      font-size: 20px;
       width: 20px;
       margin-right: 5px;
     }
     &:hover {
-      p {
-        border-bottom: 1px solid white;
-      }
+        border-top: 2px solid rgb(133,126,226);
     }
   }
 }
