--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@
   margin: 0;
 }
 .app {
-  max-width: 1200px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   min-height: 100vh;
@@ -32,4 +32,7 @@
 }
 body {
   background-color: rgb(65,65,65);
+}
+.wrapper-main {
+  width: 100%;
 }
