--- a/src/App.scss
+++ b/src/App.scss
@@ -5,18 +5,28 @@
   --primary-text-color: #ececec;
   --secondary-text-color: #e1e4e8;
   --icon-fill-color: #6a737d;
+  --accent-color: rgb(133,126,226);
 
   --navbar-height: 35px;
   --footer-height: 40px;
-  --filenames-height: 30px;
-  --main-height: calc(100vh - var(--navbar-height) - var(--footer-height));
+  --filenames-height: 50px;
+  --sidebar-height: calc(100vh - var(--navbar-height) - var(--footer-height));
+  --main-height: calc(100vh - var(--navbar-height) - var(--footer-height) - var(--filenames-height));
 
   --primary-font: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
   --secondary-font: 'JetBrains Mono', monospace;
+
+  --box-shawdow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 * {
   margin: 0;
+  scroll-behavior: smooth;
+}
+a {
+  text-decoration: none;
+  color: var(--primary-text-color);
+  display: flex;
 }
 .app {
   max-width: 1000px;
@@ -26,6 +36,7 @@
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
   font-family: var(--primary-font);
+  
 }
 .main {
   display: flex;
