--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -1,10 +1,15 @@
 .explorer {
   background-color: var(--secondary-bg-color);
   width: 150px;
-  padding: 10px;
+  padding: 0 10px;
+  position: sticky;
+  top: var(--navbar-height);
+  height: var(--sidebar-height);
+
   h3 {
     font-size: 1rem;
     font-weight: 400;
+    padding-top: 10px;
     padding-bottom: 20px;
   }
   &__portfolio {
@@ -29,8 +34,8 @@
         padding-bottom: 10px;
         cursor: pointer;
         svg {
-          font-size: 5px;
-          width: 18px;
+          // font-size: 10px;
+          width: 20px;
           margin-right: 5px;
         }
         &:hover {
@@ -53,7 +58,9 @@
 
   background-color: green;
 }
-
+.js{
+  width: 20px;
+}
 @media  (max-width: 768px)  {
   .explorer {
     display: none;
