--- a/src/components/Filenames/Filenames.scss
+++ b/src/components/Filenames/Filenames.scss
@@ -1,10 +1,12 @@
 .filenames {
   display: flex;
+  position: sticky;
+  top: var(--navbar-height);
+  z-index: 4;
   flex-direction: row;
   margin-bottom: auto;
   overflow: hidden;
   box-sizing:content-box;
-  
 
   &__item {
     display: flex;
@@ -19,10 +21,17 @@
       margin-right: 5px;
     }
     &:hover {
-        border-top: 2px solid rgb(133,126,226);
+      border-top: 2px solid var(--accent-color);
+    }
+    .active {
+      border-top: 2px solid var(--accent-color);
     }
   }
 }
+.spacer {
+  width: 100%;
+}
+
 @media  (max-width: 768px)  {
   .filenames__item {
     display: none;
