--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 .footer {
   display: flex;
   width: 100%;
+  position: sticky;
+  bottom: 0; // var(--footer-height);
   height: var(--footer-height);
   justify-content: center;
   align-items: center;
