ADD: about page and skills page

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -3,7 +3,8 @@
 .skills,
 .about,
 .contact {
-    height: 60vh;
+    
+    min-height: var(--main-height);
     // background-color: #be5ef2;
     // padding-top: var(--navbar-height)+ var(--filenames-height);
     text-align: center;
