--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,7 @@
 .home {
     display: flex;
     flex-direction: column;
-    height: var(--main-height);
+    height: 65vh;
     overflow: scroll;
     justify-content: center;
     align-items: center;
