--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
   --footer-height: 40px;
   --filenames-height: 50px;
   --sidebar-height: calc(100vh - var(--navbar-height) - var(--footer-height));
-  --main-height: calc(100vh - var(--navbar-height) - var(--footer-height) - var(--filenames-height));
+  --main-height: calc(100vh - var(--navbar-height) - var(--filenames-height));
 
   --primary-font: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
