--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 :root {
   --primary-bg-color: #24292e;
   --secondary-bg-color: #1f2428;
   --primary-text-color: #ececec;
   --secondary-text-color: #e1e4e8;
   --icon-fill-color: #6a737d;
-  --accent-color: rgb(133,126,226);
+  --accent-color: rgb(133, 126, 226);
 
   --navbar-height: 35px;
-  --footer-height: 40px;
+  --footer-height: 30px;
   --filenames-height: 50px;
   --sidebar-height: calc(100vh - var(--navbar-height) - var(--footer-height));
   --main-height: calc(100vh - var(--navbar-height) - var(--filenames-height));
 
   --primary-font: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
-  --secondary-font: 'JetBrains Mono', monospace;
+  --secondary-font: "JetBrains Mono", monospace;
 
-  --box-shawdow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  --box-shawdow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 * {
   margin: 0;
@@ -36,13 +38,12 @@ a {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
   font-family: var(--primary-font);
-  
 }
 .main {
   display: flex;
 }
 body {
-  background-color: rgb(65,65,65);
+  background-color: rgb(65, 65, 65);
 }
 .wrapper-main {
   width: 100%;
